[gd_scene load_steps=21 format=3 uid="uid://d3ksc6wuynx5a"]

[ext_resource type="Shader" path="res://Voronoisurface.gdshader" id="1_yplj2"]
[ext_resource type="Texture2D" uid="uid://brbwhi7trcf3t" path="res://resources/bubble_player1.png" id="2_2dbcb"]
[ext_resource type="Theme" uid="uid://bgqmjm172gald" path="res://FontArtistic.tres" id="3_evng2"]
[ext_resource type="Script" path="res://MultiplayerLobby/LobbyText.gd" id="4_caqv2"]
[ext_resource type="Shader" path="res://Scenes/MainMenu.gdshader" id="5_2qdjg"]
[ext_resource type="FontFile" uid="uid://d15qcr4gpooi3" path="res://CaesarDressing-Regular.ttf" id="6_uqh27"]
[ext_resource type="AudioStream" uid="uid://cctgma7w3r7xe" path="res://sunrise_over_water.mp3" id="7_5s4d5"]
[ext_resource type="Shader" path="res://Scenes/Transition.gdshader" id="8_umy5v"]
[ext_resource type="Script" path="res://Scenes/transition.gd" id="9_t15pr"]

[sub_resource type="Gradient" id="Gradient_blu0u"]
colors = PackedColorArray(0.117647, 0.117647, 0.564706, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qffpn"]
gradient = SubResource("Gradient_blu0u")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0jmjm"]
noise_type = 2
frequency = 0.0776
offset = Vector3(0, -3.6, 0)
cellular_distance_function = 1
cellular_jitter = 1.38
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ucuru"]
seamless = true
seamless_blend_skirt = 0.3
noise = SubResource("FastNoiseLite_0jmjm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scnbl"]
shader = ExtResource("1_yplj2")
shader_parameter/voronoi = SubResource("NoiseTexture2D_ucuru")

[sub_resource type="Curve" id="Curve_34mbh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_giy07"]
curve = SubResource("Curve_34mbh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7w6on"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(100, 120, 1)
emission_shape = 3
emission_box_extents = Vector3(7.325, 1, 1)
angle_min = -48.5
angle_max = 52.0
direction = Vector3(0, 0, 0)
spread = 56.728
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
gravity = Vector3(0, -5, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_giy07")
color = Color(1, 1, 1, 0.0941176)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dd348"]
shader = ExtResource("5_2qdjg")

[sub_resource type="Theme" id="Theme_5h72o"]
default_base_scale = 1.0
default_font = ExtResource("6_uqh27")
default_font_size = 100

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o7cbw"]
shader = ExtResource("8_umy5v")

[node name="MultiplayerLobby" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577.953, 323.668)
rotation = -1.5708
scale = Vector2(10.3003, 18.0381)
texture = SubResource("GradientTexture2D_qffpn")

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_scnbl")
offset_left = 1151.0
offset_top = -2.0
offset_right = 1303.0
offset_bottom = 1148.0
rotation = 1.5708
mouse_filter = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(448, 737)
amount = 10
process_material = SubResource("ParticleProcessMaterial_7w6on")
texture = ExtResource("2_2dbcb")
lifetime = 11.84
preprocess = 32.1

[node name="HostButton" type="Button" parent="."]
offset_left = 458.0
offset_top = 388.0
offset_right = 820.0
offset_bottom = 451.0
theme = ExtResource("3_evng2")
text = "Host"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 26.0
offset_top = 276.0
offset_right = 388.0
offset_bottom = 551.0
theme_override_constants/separation = 40

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 69.86)
layout_mode = 2
theme = ExtResource("3_evng2")
script = ExtResource("4_caqv2")

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_evng2")
text = "Join"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_evng2")
text = "Back"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -19.0
offset_right = 1163.0
offset_bottom = 658.0
mouse_filter = 2
color = Color(0.1144, 0.239213, 0.44, 0.568627)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_dd348")
offset_top = 59.0
offset_right = 1157.0
offset_bottom = 231.0
theme = SubResource("Theme_5h72o")
bbcode_enabled = true
text = "[center]Multiplayer [/center]"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5s4d5")
autoplay = true
bus = &"Music"

[node name="Transition" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_o7cbw")
offset_right = 1167.0
offset_bottom = 673.0
mouse_filter = 2
script = ExtResource("9_t15pr")

[connection signal="pressed" from="HostButton" to="VBoxContainer/TextEdit" method="_on_host_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="VBoxContainer/TextEdit" method="_on_text_changed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="VBoxContainer/TextEdit" method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="VBoxContainer/TextEdit" method="_on_back_button_pressed"]
